Removed erroneous Page Not Found link

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,7 +1,10 @@
 ---
 permalink: /404.html
+layout: none
+title: ""
+sitemap: false
 ---
 
 # Page not found
 
-Return to the [home page](/) or to the [overview](./index.md).
+Return to the [home page](/) or to the [overview](./index).
