Applied redesigned layout for Pages

--- a/docs/404.md
+++ b/docs/404.md
@@ -1,9 +1,12 @@
 ---
-permalink: /404.html
 layout: default
+title: Page Not Found
+permalink: /404.html
 sitemap: false
 ---
 
-# Page not found
+# Page Not Found
 
-Return to the [home page](/) or to the [overview](./index).
+Sorry, the page you're looking for doesn't exist.
+
+You can return to the [home page](/) or [read the paper](./higher-resolution-hypothesis).
