Fixed missing links and incomplete paper title

--- a/docs/404.md
+++ b/docs/404.md
@@ -9,4 +9,4 @@ sitemap: false
 
 Sorry, the page you're looking for doesn't exist.
 
-You can return to the [home page](/) or [read the paper](./higher-resolution-hypothesis).
+You can return to the [home page](/) or [read the paper](./hrh-paper).
